[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "kv"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
crc32fast = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
